fixed spacing

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,11 +1,11 @@
-body{
+body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
 }
 
-#custom-scroll{
+#custom-scroll {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -30,15 +30,15 @@ body{
   background: rgb(102, 102, 102, 0.75);
 }
 
-.main{
+.main {
     flex: 1 0 auto;
 }
 
-.footer{
+.footer {
     flex-shrink: 0;
 }
 
-.formAsLink{
+.formAsLink {
     margin-bottom: 0px;
 }
 
